--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,4 @@
 {
   "name": "sort.panel",
-  "version": "1.0.0",
-  "main": "",
-  "ignore": [
-    "src",
-    ".gitignore",
-    "bower.json",
-    "source",
-    "package.json",
-    "README.md"
-  ],
-  "dependencies": {
-    "jquery": ">=1.10.2",
-    "underscore": "~1.5.2"
-  }
+  "version": "1.0.0"
 }
